Updates root to go directly to movies with bechdel reviews

--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -12,6 +12,7 @@
         <li class="nav-link more">
           <%= link_to "Movies", movies_path, onclick: "javascript:void(0)" %>
           <ul class="submenu submenu-adjustments">
+            <li><%= link_to "Bechdel Test Ratings", movies_path(sort_by: :bechdel_reviews) %></li>
             <li><%= link_to "Top Box Office", movies_path(sort_by: :box_office) %></li>
             <li><%= link_to "Top Rentals", movies_path(sort_by: :rentals) %></li>
             <li><%= link_to "Cannes Film Festival", movies_path(sort_by: :Cannes) %></li>
