prints to screen @categories, for debugging

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,9 @@
 
 <div class="cards">
 
-<% if !@categories.nil? %>
+<%= @categories %>
+
+<% if @categories %>
 
   <% @categories.each do |category| %>
     <div class="card" style="height: 240px;">
