--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -22,44 +22,6 @@
       $(".nav .more").removeClass("active-nav-item");
     });
   });
-
-  $(function() {
-
- // Below is the name of the textfield that will be autocomplete
-    $('#autocomplete_search_field').autocomplete({
- // This shows the min length of charcters that must be typed
- // before the autocomplete looks for a match.
-            minLength: 2,
- // This is the source of the auocomplete suggestions. In this case a list of
- // names from the people controller, in JSON format.
-            source: '<%= movies_path(:json) %>',
-  // This updates the textfield when you move the updown the
-  // suggestions list, with your keyboard.
-  // In our case it will reflect the same value that you see in
-  // the suggestions which is the person.given_name.
-            focus: function(event, ui) {
-                $('#autocomplete_search_field').val(ui.item.movie.title);
-                return false;
-            },
- // Once a value in the drop down list is selected, do the following:
-            select: function(event, ui) {
- // place the person.given_name value into the textfield called 'select_origin'...
-                $('#autocomplete_search_field').val(ui.item.person.given_name);
- // and place the person.id into the hidden textfield called 'link_origin_id'.
-        $('#link_origin_id').val(ui.item.person.id);
-                return false;
-            }
-        })
- // The below code is straight from the jQuery example. It formats what data is
- // displayed in the dropdown box, and can be customized.
-        .data( "autocomplete" )._renderItem = function( ul, item ) {
-            return $( "<li></li>" )
-                .data( "item.autocomplete", item )
- // For now which just want to show the person.given_name in the list.
-                .append( "<a>" + item.person.given_name + "</a>" )
-                .appendTo( ul );
-        };
-    });
 </script>
 
 
@@ -88,12 +50,11 @@
     <div class="navigation-tools">
       <div class="search-bar">
         <div class="search-and-submit">
-          <% form_for(@movies) do |f| %>
-            <!-- This is the textfield that will autocomplete. What is displayed here is for the user to see but the data will not go anywhere -->
-            <input id="autocomplete_search_field"/>
-            <!-- This is the hidden textfield that will be given the Persons ID based on who is selected. This value will be sent as a parameter -->
-            <input id="link_origin_id" name="link[origin_id]" type="hidden"/>
-            <%= f.submit %>
+          <%= form_tag(movies_path, method: "get", type: "search") do %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search Happy" %>
+            <button type="submit">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="">
+          </button>
           <% end %>
         </div>
       </div>
