Adds in current release dvds to rotten tomatoes scraping + refactoring
 - splits tasks into 3 tasks: box office, top rentals, current release dvds
 - extrapolates rotten tomatoes key into instance var
 - puts movie.save! into rescue block (was blowing up before)
 - also only creates category + rotten tomatoes object when movie
   is able to save

--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -15,6 +15,7 @@
             <li><%= link_to "Bechdel Test Ratings", movies_path(sort_by: :bechdel) %></li>
             <li><%= link_to "Box Office", movies_path(sort_by: :box_office) %></li>
             <li><%= link_to "Top Rentals", movies_path(sort_by: :rentals) %></li>
+            <li><%= link_to "Current DVD Releases", movies_path(sort_by: :current_release) %></li>
             <li><%= link_to "Cannes Film Festival", movies_path(sort_by: :Cannes) %></li>
           </ul>
         </li>
